--- a/.github/workflows/release.yml
+++ b/.github/workflows/release.yml
@@ -71,7 +71,7 @@ jobs:
           ## Installation
           
           ```bash
-          pip install eml-parser==${{ steps.tag.outputs.tag }}
+          pip install eml-extractor==${{ steps.tag.outputs.tag }}
           ```
           
           ## What's Changed
@@ -87,5 +87,5 @@ jobs:
       with:
         upload_url: ${{ steps.create_release.outputs.upload_url }}
         asset_path: ./dist/
-        asset_name: eml-parser-${{ steps.tag.outputs.tag }}-dist.zip
+        asset_name: eml-extractor-${{ steps.tag.outputs.tag }}-dist.zip
         asset_content_type: application/zip 
