--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -49,7 +49,7 @@ jobs:
     
     - name: Test import
       run: |
-        python -c "from eml_parser import EmlReader, MultiPartParser; print('Import successful')"
+        python -c "from eml_extractor import EmlReader, MultiPartParser; print('Import successful')"
 
   lint:
     name: Lint and Type Check
@@ -71,13 +71,13 @@ jobs:
     
     - name: Run flake8
       run: |
-        flake8 eml_parser/ --count --select=E9,F63,F7,F82 --show-source --statistics
-        flake8 eml_parser/ --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
+        flake8 eml_extractor/ --count --select=E9,F63,F7,F82 --show-source --statistics
+        flake8 eml_extractor/ --count --exit-zero --max-complexity=10 --max-line-length=127 --statistics
     
     - name: Run mypy
       run: |
-        mypy eml_parser/ --ignore-missing-imports
+        mypy eml_extractor/ --ignore-missing-imports
     
     - name: Check formatting with black
       run: |
-        black --check --diff eml_parser/ 
+        black --check --diff eml_extractor/ 
